# luston.neocities.org

./: .gitignore  Cargo.toml  composer.json  cspell.json  generate_prod.sh  generate_prod_settings.sh  ideas.md  index.html  not_found.html  package.json  save.corru.txt  style.css  watch.sh  watch_assets.sh
.github/workflows/: build-and-deploy.yml
.obsidian/: bookmarks.json  types.json  workspace.json
app/config/: sculpin_kernel.yml  sculpin_site_dev.yml  sculpin_site_prod.yml
assets/css/: app.css
assets/js/: dynamic_title.js  header_margin.js
secret/: index.html
source/: about-me.md  about-website.md  about.md  index.md  logs.html  not_found.html  robots.txt  secret.md  thanks.md
source/_layouts/: default.html
source/_partials/: sidebar.html
source/_posts/: 2024-07-26-github-pipeline.md  2024-07-26-i-love-p1r4cy.md  2024-07-26-ideas.md  2024-07-27-github-pipeline.md  2024-07-28-useless-ram.md
source/_views/: post.html
source/assets/css/: app.css
source/assets/js/: background_render.js  dynamic_title.js  outside_links_blank.js
source/blog/: categories.html  tags.html
source/blog/categories/: category.html
source/blog/tags/: tag.html
source/logs/: categories.html  tags.html
source/logs/categories/: category.html
source/logs/tags/: tag.html
src/: main.rs
templates/: 404.html.tera  index.html.tera
templates/layouts/: default.html.tera
templates/partials/: sidebar.html.tera  sidebar_content.html.tera
