[package]
name = "luston_neocities_org"
authors = ["Luston <dev@luston.fr>"]
version = "0.1.0"
edition = "2024"
readme = "README.md"
homepage = "https://luston.neocities.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]